--- a/PlurtechTest/Site1.Master
+++ b/PlurtechTest/Site1.Master
@@ -4,11 +4,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-<%--    <script src="https://github.com/luis-almeida/unveil/raw/master/jquery.unveil.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/src/loadingoverlay.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/extras/loadingoverlay_progress/loadingoverlay_progress.min.js"></script>--%>
+    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/jquery.unveil.js" type="text/javascript"></script>
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <style type="text/css">
 
